# ParaCook-Scoreboard

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: aggregated.csv  aggregated.md
examples/: demo_run.py
pcook/: __init__.py  cli.py  eval_harness.py  kitchen_env.py  metrics.py  results.py  scenarios.py
pcook/planners/: __init__.py  oracle.py  parallel.py  sequential.py
tasks/: levels.yaml
tests/: test_cli.py  test_env_determinism.py  test_metrics.py  test_results.py  test_scenarios.py  test_schedulers.py
tmp_cli_test/artifacts/: aggregated.csv  aggregated.md
viz/: __init__.py  charts.py
